--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build  --aot --target=production"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
-    "@angular/cli": "1.5.4",
     "@angular/common": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -32,7 +30,8 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.4",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
