--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.4",
+    "@angular/cli": "^1.5.4",
     "@angular/compiler": "^5.0.5",
     "@angular/compiler-cli": "^5.0.5",
     "@angular/language-service": "^5.0.0",
