--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall" : "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+     "@angular/cli": "^1.5.4",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/core": "^5.0.0",
