--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cursoangularjs",
   "version": "0.0.0",
   "license": "MIT",
+  "main":"server.js",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
